# distreqx

./: .flake8  .gitignore  .htaccess  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test.ipynb
.github/: FUNDING.yml
.github/workflows/: deploy-docs.yml  publish-to-pypi.yml  release.yml  run-tests.yml
_static/: custom_css.css
api/bijectors/_bijector/: index.html
api/bijectors/block/: index.html
api/bijectors/chain/: index.html
api/bijectors/diag_linear/: index.html
api/bijectors/identity/: index.html
api/bijectors/inverse/: index.html
api/bijectors/rational_quadratic_spline/: index.html
api/bijectors/scalar_affine/: index.html
api/bijectors/shift/: index.html
api/bijectors/sigmoid/: index.html
api/bijectors/tanh/: index.html
api/bijectors/triangular_linear/: index.html
api/distributions/_distribution/: index.html
api/distributions/bernoulli/: index.html
api/distributions/beta/: index.html
api/distributions/categorical/: index.html
api/distributions/empirical/: index.html
api/distributions/gamma/: index.html
api/distributions/improper_uniform/: index.html
api/distributions/independent/: index.html
api/distributions/logistic/: index.html
api/distributions/mixture_same_family/: index.html
api/distributions/mvn_diag/: index.html
api/distributions/mvn_from_bijector/: index.html
api/distributions/mvn_full_covariance/: index.html
api/distributions/mvn_tri/: index.html
api/distributions/normal/: index.html
api/distributions/transformed/: index.html
api/utils/math/: index.html
assets/: _hippogriffe.css
distreqx/: __init__.py  _custom_meta.py  _custom_types.py
distreqx/bijectors/: __init__.py  _bijector.py  _block.py  _chain.py  _diag_linear.py  _exp.py  _identity.py  _indexed.py  _inverse.py  _lambda.py  _leafwise.py  _linear.py  _masked_coupling.py  _permute.py  _r2_to_complex.py  _rational_quadratic_spline.py  _reshape.py  _restructure.py  _scalar_affine.py  _shift.py  _sigmoid.py  _softplus.py  _split.py  _split_coupling.py  _tanh.py  _tranpose.py  _treemap.py  _triangular_linear.py  _unconstrained_affine.py  block.py  chain.py  diag_linear.py  scalar_affine.py  shift.py  sigmoid.py  tanh.py  triangular_linear.py
distreqx/distributions/: __init__.py  _bernoulli.py  _beta.py  _categorical.py  _deterministic.py  _distribution.py  _empirical.py  _gamma.py  _improper_uniform.py  _independent.py  _joint.py  _logistic.py  _lognormal.py  _mixture_same_family.py  _mvn_diag.py  _mvn_from_bijector.py  _mvn_full_covariance.py  _mvn_tri.py  _normal.py  _one_hot_categorical.py  _transformed.py  _truncated_normal.py  _uniform.py  bernoulli.py  beta.py  categorical.py  independent.py  mixture_same_family.py  mvn_diag.py  mvn_from_bijector.py  mvn_tri.py  normal.py  one_hot_categorical.py  transformed.py  uniform.py
distreqx/utils/: __init__.py  math.py  transformations.py
docs/: index.md  requirements.txt
docs/_static/: .README.md
docs/misc/: faq.md
examples/: 01_vae.ipynb  02_mixture_models.ipynb  03_normalizing_flow.ipynb
examples/01_vae/: index.html
examples/02_mixture_models/: index.html
examples/03_normalizing_flow/: index.html
misc/faq/: index.html
search/: search_index.json
tests/: abstractbijector_test.py  abstractdistribution_test.py  abstractlinear_test.py  bernoulli_test.py  beta_test.py  block_test.py  categorical_test.py  chain_test.py  conftest.py  couplings_test.py  deterministic_test.py  diag_linear_test.py  empirical_test.py  empty_test.py  exp_test.py  gamma_test.py  identity_test.py  improper_uniform_test.py  independent_test.py  indexed_test.py  inverse_test.py  joint_test.py  lambda_test.py  leafwise_test.py  logistic_test.py  lognormal_test.py  math_test.py  mixture_same_family_test.py  mvn_diag_test.py  mvn_from_bijector_test.py  mvn_full_covariance_test.py  mvn_tri_test.py  normal_test.py  one_hot_categorical_test.py  permute_test.py  r2_to_complex_test.py  rational_quadratic_spline_test.py  requirements.txt  reshape_test.py  restructure_test.py  (+14 more)
(+50 files in other folders)
