[project]
name = "distreqx"
version = "0.0.2"
description = "Lightweight JAX library of probability distributions and bijectors."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Owen Lockwood"},
]
keywords = ["jax", "probability", "distributions", "equinox", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {repository = "https://github.com/lockwo/distreqx"}
dependencies = ["equinox>=0.11.1", "jaxtyping>=0.2.20", "ihoop>=0.1.1"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.build]
include = ["distreqx/*"]

[project.optional-dependencies]
test = [
  "beartype",
  "jax[cpu]",
  "parameterized",
  "pytest",
]
docs = [
  "hippogriffe==0.2.2",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "pymdown-extensions==10.14.3"
]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=distreqx,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.ruff]
[tool.ruff.lint]
select = ["E", "F", "I001"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
fixable = ["I001", "F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = ["typing_extensions"]
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["distreqx", "tests"]
